--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "./node_modules/next/dist/bin/next start",
-    "start-dev": "next start",
+    "start": "next start",
     "lint": "next lint",
-    "deploy": "./node_modules/pm2/bin/pm2-runtime start npm --name \"kazam-web-frontend\" -- start",
-    "optimize-images": "node scripts/optimize-images.js"
+    "export": "next build && next export",
+    "deploy": "npm run build"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.3",
+    "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
